--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "netlify-cms-backend-fs": "0.4.4",
     "npm-run-all": "4.1.5"
   },
-  "fileSystemPath": "exampleSite"
+  "fileSystemPath": "exampleSite",
+  "devDependencies": {
+    "lit-element": "^2.2.0"
+  }
 }
