--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
-language: go
-go:
-  - master
 install:
-  - go get github.com/spf13/hugo
+  - curl -LO https://github.com/gohugoio/hugo/releases/download/v0.55.4/hugo_0.55.4_Linux-64bit.deb
+  - sudo dpkg -i hugo_0.55.4_Linux-64bit.deb
 script:
   - cd exampleSite
   - hugo
