--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ install:
   - sudo dpkg -i hugo_0.55.4_Linux-64bit.deb
 script:
   - cd exampleSite
-  - hugo
+  - HUGO_BASEURL="https://sunrisemovement.github.io/hugo-sunrise-hub-website" hugo
 deploy:
   provider: pages
   local_dir: exampleSite/public
