--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/leaflet": "1.4.4",
+    "@types/ol": "5.3.2",
     "cors": "2.8.5",
     "express": "4.17.1",
     "hugo-bin": "0.43.6",
+    "lit-html": "1.1.0",
     "netlify-cms-backend-fs": "0.4.4",
     "npm-run-all": "4.1.5"
   },
