--- a/package.json
+++ b/package.json
@@ -5,23 +5,34 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "run-p start:*",
-    "start:hugo": "cd exampleSite && hugo -p 1315 server",
-    "start:fs-backend": "node ./scripts/dev-server.js"
+    "build:webpack": "npx webpack",
+    "start": "run-s build:webpack dev",
+    "dev": "run-p dev:*",
+    "dev:hugo": "cd exampleSite && hugo -p 1315 server",
+    "dev:fs-backend": "node ./scripts/dev-server.js",
+    "dev:webpack": "npx webpack --watch",
+    "dev:sync-action-network": "env $(cat .env | xargs) npm run _dev:sync-action-network-help",
+    "_dev:sync-action-network-help": "./scripts/sync_action_network.py --token=$ACTION_NETWORK_TOKEN --dest=./exampleSite/data/actionnetwork/events.json"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/domready": "^1.0.0",
     "@types/leaflet": "1.4.4",
-    "@types/ol": "5.3.2",
+    "acorn": "^6.1.1",
     "cors": "2.8.5",
+    "domready": "^1.0.8",
     "express": "4.17.1",
-    "hugo-bin": "0.43.6",
+    "leaflet": "^1.5.1",
+    "lit-element": "2.2.0",
     "lit-html": "1.1.0",
     "netlify-cms-backend-fs": "0.4.4",
-    "npm-run-all": "4.1.5"
-  },
-  "devDependencies": {
-    "lit-element": "2.2.0"
+    "npm-run-all": "4.1.5",
+    "parcel-bundler": "1.12.3",
+    "ts-loader": "^6.0.4",
+    "typescript": "3.5.2",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5",
+    "webpack-manifest-plugin": "^2.0.4"
   }
 }
