service worker, tile stitching instead of heavy map apis

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "lib": ["esnext", "dom", "webworker"]
   }
 }
