--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@types/domready": "^1.0.0",
     "@types/leaflet": "1.4.4",
+    "@types/ol": "^5.3.3",
     "acorn": "^6.1.1",
+    "clean-webpack-plugin": "^3.0.0",
     "cors": "2.8.5",
     "domready": "^1.0.8",
     "express": "4.17.1",
@@ -28,11 +30,13 @@
     "lit-html": "1.1.0",
     "netlify-cms-backend-fs": "0.4.4",
     "npm-run-all": "4.1.5",
+    "ol": "^5.3.3",
     "parcel-bundler": "1.12.3",
     "ts-loader": "^6.0.4",
     "typescript": "3.5.2",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
-    "webpack-manifest-plugin": "^2.0.4"
+    "webpack-manifest-plugin": "^2.0.4",
+    "workbox-webpack-plugin": "^4.3.1"
   }
 }
