--- a/package.json
+++ b/package.json
@@ -17,26 +17,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/domready": "^1.0.0",
-    "@types/leaflet": "1.4.4",
-    "@types/ol": "^5.3.3",
-    "acorn": "^6.1.1",
-    "clean-webpack-plugin": "^3.0.0",
+    "@types/domready": "1.0.0",
+    "acorn": "6.1.1",
+    "clean-webpack-plugin": "3.0.0",
     "cors": "2.8.5",
-    "domready": "^1.0.8",
+    "domready": "1.0.8",
     "express": "4.17.1",
-    "leaflet": "^1.5.1",
     "lit-element": "2.2.0",
     "lit-html": "1.1.0",
     "netlify-cms-backend-fs": "0.4.4",
     "npm-run-all": "4.1.5",
-    "ol": "^5.3.3",
-    "parcel-bundler": "1.12.3",
-    "ts-loader": "^6.0.4",
+    "ts-loader": "6.0.4",
     "typescript": "3.5.2",
-    "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5",
-    "webpack-manifest-plugin": "^2.0.4",
-    "workbox-webpack-plugin": "^4.3.1"
+    "webpack": "4.35.2",
+    "webpack-cli": "3.3.5",
+    "webpack-manifest-plugin": "2.0.4"
   }
 }
